--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'junit:junit:4.13.1'
     compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('org.springframework.boot:spring-boot-test')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.projectlombok:lombok')
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
 //    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
