--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ repositories {
 dependencies {
     implementation 'junit:junit:4.13.1'
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     compile('org.projectlombok:lombok')
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
